// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds notification views fetches notifications with a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "badge",
    "record": Object {
      "$type": "app.bsky.badge",
      "assertion": Object {
        "tag": "neat",
        "type": "tag",
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(1)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "badge",
    "record": Object {
      "$type": "app.bsky.badge",
      "assertion": Object {
        "tag": "cool",
        "type": "tag",
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "badge",
    "record": Object {
      "$type": "app.bsky.badge",
      "assertion": Object {
        "type": "employee",
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "name": "dan.test",
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(4)",
        "uri": "record(4)",
      },
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(4)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(4)",
          "uri": "record(4)",
        },
      },
      "text": "of course",
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(4)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(4)",
          "uri": "record(4)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "name": "dan.test",
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(4)",
        "uri": "record(4)",
      },
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "like",
    "reasonSubject": "record(9)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(9)",
        "uri": "record(9)",
      },
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(4)",
        "uri": "record(4)",
      },
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "like",
    "reasonSubject": "record(9)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(9)",
        "uri": "record(9)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(4)",
        "uri": "record(4)",
      },
    },
    "uri": "record(12)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "name": "dan.test",
    },
    "cid": "cids(13)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Array [
            0,
            18,
          ],
          "type": "mention",
          "value": "user(1)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(13)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(14)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(14)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(15)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(15)",
  },
]
`;

exports[`pds notification views fetches notifications without a last-seen 1`] = `
Array [
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "badge",
    "record": Object {
      "$type": "app.bsky.badge",
      "assertion": Object {
        "tag": "neat",
        "type": "tag",
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(0)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(1)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "badge",
    "record": Object {
      "$type": "app.bsky.badge",
      "assertion": Object {
        "tag": "cool",
        "type": "tag",
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(1)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "badge",
    "record": Object {
      "$type": "app.bsky.badge",
      "assertion": Object {
        "type": "employee",
      },
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(2)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "name": "dan.test",
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(4)",
        "uri": "record(4)",
      },
    },
    "uri": "record(3)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(4)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(4)",
          "uri": "record(4)",
        },
      },
      "text": "of course",
    },
    "uri": "record(5)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": Object {
        "parent": Object {
          "cid": "cids(4)",
          "uri": "record(4)",
        },
        "root": Object {
          "cid": "cids(4)",
          "uri": "record(4)",
        },
      },
      "text": "hear that",
    },
    "uri": "record(6)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "name": "dan.test",
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(4)",
        "uri": "record(4)",
      },
    },
    "uri": "record(7)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "like",
    "reasonSubject": "record(9)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(9)",
        "uri": "record(9)",
      },
    },
    "uri": "record(8)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(4)",
        "uri": "record(4)",
      },
    },
    "uri": "record(10)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(11)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "like",
    "reasonSubject": "record(9)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(9)",
        "uri": "record(9)",
      },
    },
    "uri": "record(11)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": Object {
      "$type": "app.bsky.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": Object {
        "cid": "cids(4)",
        "uri": "record(4)",
      },
    },
    "uri": "record(12)",
  },
  Object {
    "author": Object {
      "did": "user(3)",
      "name": "dan.test",
    },
    "cid": "cids(13)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "mention",
    "record": Object {
      "$type": "app.bsky.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "entities": Array [
        Object {
          "index": Array [
            0,
            18,
          ],
          "type": "mention",
          "value": "user(1)",
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(13)",
  },
  Object {
    "author": Object {
      "did": "user(2)",
      "displayName": "bobby",
      "name": "bob.test",
    },
    "cid": "cids(14)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(14)",
  },
  Object {
    "author": Object {
      "did": "user(0)",
      "name": "carol.test",
    },
    "cid": "cids(15)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "reason": "follow",
    "record": Object {
      "$type": "app.bsky.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(15)",
  },
]
`;
